logs/links-luxuryadmin-follit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/links_luxuryadmin_follit-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/luxuryadmin'...
Listing './lib/python3.5/site-packages/luxuryadmin/jstemplates'...
Listing './lib/python3.5/site-packages/luxuryadmin/migrations'...
Compiling './lib/python3.5/site-packages/luxuryadmin/models.py'...
***   File "./lib/python3.5/site-packages/luxuryadmin/models.py", line 76
    print "Registered plugin", plugin_name
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/luxuryadmin/static'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/css'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/css/smoothness'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/css/smoothness/images'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/js'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/luxuryadmin'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/luxuryadmin/css'...
Listing './lib/python3.5/site-packages/luxuryadmin/static/luxuryadmin/js'...
Listing './lib/python3.5/site-packages/luxuryadmin/templates'...
Listing './lib/python3.5/site-packages/luxuryadmin/templates/luxuryadmin'...
Listing './lib/python3.5/site-packages/luxuryadmin/templates/luxuryadmin/forms'...
Listing './lib/python3.5/site-packages/luxuryadmin/templates/luxuryadmin/snippets'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
